# bevy_streaming

./: .envrc  .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
docker/: Dockerfile
examples/livekit/: main.rs
examples/simple/: camera_controller.rs  main.rs
examples/surface/: cursor.rs  main.rs
nix/: module.nix  nixpkgs.nix  overlays.nix  rust-toolchain.nix
npins/: sources.json
src/: helper.rs  lib.rs
src/capture/: driver.rs  mod.rs
src/gst_webrtc_encoder/: mod.rs
src/pixelstreaming/: handler.rs  utils.rs
src/surface/: dmabuf.rs  encoder.rs  mod.rs  node.rs
