[package]
name = "bevy_streaming"
version = "0.1.0"
edition = "2024"
resolver = "2"

[lib]
name = "bevy_streaming"
crate-type = ["lib"]
path = "src/lib.rs"

[[example]]
name = "simple"
required-features = ["pixelstreaming"]

[[example]]
name = "surface"
required-features = ["pixelstreaming", "surface"]

[[example]]
name = "livekit"
required-features = ["livekit"]

[dependencies]
bevy_camera = { version = "0.18" }
bevy_app = { version = "0.18" }
bevy_ecs = { version = "0.18" }
bevy_render = { version = "0.18" }
bevy_asset = { version = "0.18" }
bevy_image = { version = "0.18" }
bevy_log = { version = "0.18" }
bevy_input = { version = "0.18" }
bevy_picking = { version = "0.18" }
bevy_math = { version = "0.18" }
bevy_window = { version = "0.18", optional = true }
bevy_utils = { version = "0.18" }
bevy_derive = { version = "0.18" }
bevy_platform = { version = "0.18" }
crossbeam-channel = "0.5"

## GSTREAMER
glib = { package = "glib", version = "0.21.5" }
gst = { package = "gstreamer", version = "0.24.4" }
gst-app = { package = "gstreamer-app", version = "0.24.4" }
gst-base = { package = "gstreamer-base", version = "0.24.4" }
gst-video = { package = "gstreamer-video", version = "0.24.4" }
gst-sdp = { package = "gstreamer-sdp", version = "0.24.4" }
gst-rtp = { package = "gstreamer-rtp", version = "0.24.4" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.24.4" }
gst-utils = { package = "gstreamer-utils", version = "0.24.4" }
gst-allocators = { package = "gstreamer-allocators", version = "0.24.4" }
gst-plugin-webrtc = { version = "0.14.4", default-features = false }
gst-plugin-rtp = { version = "0.14.4" }
anyhow = "1"
derive_more = { version = "2.0", default-features = false, features = ["display", "error", "deref", "debug"] }

tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "time",
], optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-stream = { version = "0.1.11", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
async-tungstenite = { version = "0.29", optional = true, features = [
    "tokio-runtime",
    "tokio-native-tls",
    "url",
] }
url = { version = "2", optional = true }
byteorder = { version = "1.5.0", optional = true }


atomic_float = { optional = true, version = "1.1" }
atomicbox = { optional = true, version = "0.4" }
wgpu = { optional = true, version = "27.0", default-features = false }
wgpu-hal = { optional = true, version = "27.0", default-features = false }
ash = { optional = true, version = "0.38", default-features = false }
arrayvec = { optional = true, version = "0.7", default-features = false }
drm-fourcc = { optional = true, version = "2.2", default-features = false }

[dev-dependencies]
bevy = { version = "0.18" }
bevy_panorbit_camera = { version = "0.34.0" }

[features]
default = ["pixelstreaming", "surface"]
surface = [
    "bevy_render/raw_vulkan_init",
    "dep:atomic_float", "dep:atomicbox",
    "dep:wgpu",
    "dep:wgpu-hal",
    "dep:ash",
    "dep:arrayvec",
    "dep:drm-fourcc",
    "gst/v1_24",
    "gst-app/v1_24",
    "gst-base/v1_24",
    "gst-video/v1_24",
    "gst-sdp/v1_24",
    "gst-rtp/v1_24",
    "gst-webrtc/v1_24",
    "gst-allocators/v1_24",
]
cuda = []
pixelstreaming = [
    "dep:url",
    "dep:async-tungstenite",
    "dep:serde",
    "dep:futures",
    "dep:serde_json",
    "dep:tokio",
    "dep:tokio-native-tls",
    "dep:tokio-stream",
    "dep:byteorder",
    "dep:bevy_window",
]
livekit = ["gst-plugin-webrtc/livekit"]
gst_v1_20 = [
    "gst/v1_20",
    "gst-app/v1_20",
    "gst-base/v1_20",
    "gst-video/v1_20",
    "gst-sdp/v1_20",
    "gst-rtp/v1_20",
    "gst-webrtc/v1_20",
    "gst-allocators/v1_20"
]
gst_v1_22 = [
    "gst/v1_22",
    "gst-app/v1_22",
    "gst-base/v1_22",
    "gst-video/v1_22",
    "gst-sdp/v1_22",
    "gst-rtp/v1_22",
    "gst-webrtc/v1_22",
    "gst-allocators/v1_22",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

#[patch.crates-io]
#glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.21" }
#glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.21" }
#glib-macros = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.21" }
#gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.21" }
